// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Buttons/Skeleton render large 1`] = `
<div
  class="MuiBox-root MuiBox-root-24 makeStyles-root-17 makeStyles-large-20 makeStyles-root-21 makeStyles-animate-23"
/>
`;

exports[`components/Buttons/Skeleton render medium by default 1`] = `
<div
  class="MuiBox-root MuiBox-root-8 makeStyles-root-1 makeStyles-medium-3 makeStyles-root-5 makeStyles-animate-7"
/>
`;

exports[`components/Buttons/Skeleton render small 1`] = `
<div
  class="MuiBox-root MuiBox-root-16 makeStyles-root-9 makeStyles-small-10 makeStyles-root-13 makeStyles-animate-15"
/>
`;
